# BrowseIt

./: .gitignore  .releaserc.json  HARDENING_PLAN.md  LICENSE  README.md  eslint.config.js  index.html  package-lock.json  package.json  vite.config.ts
.github/: dependabot.yml
.github/workflows/: ci.yml  release.yml
scripts/: update-version.sh
src/: App.css  App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs
src/components/: AddressBar.tsx  ContextMenu.tsx  FileList.tsx  PreviewPanel.tsx  SettingsModal.tsx  Sidebar.tsx  StatusBar.tsx  TabBar.tsx  Toolbar.tsx
src/filesystem/: FakeFilesystemProvider.ts  FilesystemProvider.ts  TauriFilesystemProvider.ts  index.ts
src/hooks/: useContextMenuHandlers.ts  useFileExplorer.ts  useKeyboardShortcuts.ts
src/test/: setup.ts
src/test/performance/: FileList.perf.test.tsx
src/test/unit/: ContextMenu.test.tsx  FakeFilesystemProvider.test.ts  PreviewPanel.test.tsx  StatusBar.test.tsx  TabBar.test.tsx  format.test.ts  useFileExplorer.test.ts
src/types/: index.ts
src/utils/: format.ts  format.tsx
