[package]
name = "browse-it"
version = "0.1.0"
description = "BrowseIt - A modern file manager for macOS"
authors = ["you"]
license = "MIT"
repository = ""
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.6", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.10.3", features = [] }
tauri-plugin-log = "2"
tauri-plugin-dialog = "2"
tauri-plugin-shell = "2"
tauri-plugin-fs = "2"
tauri-plugin-clipboard-manager = "2"
walkdir = "2"
chrono = "0.4"
trash = "5"
open = "5"
urlencoding = "2"
zip = { version = "8", default-features = false, features = ["deflate"] }
shell-words = "1"
